# drowtsil

./: .gitignore  README.md  drowtsil.py  setup.cfg
docs/: drowtsil.html  helpers.html
examples/: level0_example.py  level1_example.py  level2_example.py  level3_example.py
html/: drowtsil.html  helpers.html
modules/: helpers.py
src/modules/: helpers.py
tests/: test_drowtsil.py  test_drowtsil_helpers.py
