[metadata]
name = drowtsil
version = <version number: 1.0.0>
license = license,
description = 'Another wordlist generator for penetration testing and education purposes'
long_description = file: README.md
author = Mojtaba Hemmati
url='https://github.com/mojitba/drowtsil',
packages = find:
package_dir =
    =src
include_package_data = True
[options.packages.find]
where=src